# tree-sitter-stacktrace

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-trace.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_trace/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTrace/: trace.h
bindings/swift/TreeSitterTraceTests/: TreeSitterTraceTests.swift
examples/stacktraces/: csharp_dotnet_deep_trace.txt  elixir_phoenix_deep_trace.txt  generic_fallback_edge_trace.txt  go_panic_deep_trace.txt  java_springframework_deep_trace.txt  nodejs_express_deep_trace.txt  php_laravel_deep_trace.txt  python_fastapi_deep_trace.txt  ruby_rails_deep_trace.txt  rust_tokio_deep_trace.txt  swift_ios_deep_trace.txt
queries/stacktrace/: highlights.scm
scripts/: parse_examples.sh
src/: grammar.json  node-types.json  parser.c
